update from DS (UI fix)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4044 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -5,34 +5,34 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=509" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=509" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=509" />
-<link rel="stylesheet" href="stylesheets/playback.css?v=509" />
-<link rel="stylesheet" href="stylesheets/epcurate.css?v=509" />
-<link rel="stylesheet" href="stylesheets/ep-curation.css?v=509" />
+<link rel="stylesheet" href="stylesheets/style.css?v=517" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=517" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=517" />
+<link rel="stylesheet" href="stylesheets/playback.css?v=517" />
+<link rel="stylesheet" href="stylesheets/epcurate.css?v=517" />
+<link rel="stylesheet" href="stylesheets/ep-curation.css?v=517" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=509"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=509"></script>
-<script src="javascripts/jquery.ellipsis.js?v=509"></script>
-<script src="javascripts/jquery.blockUI.js?v=509"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=509"></script>
-<script src="javascripts/jquery.uniform.min.js?v=509"></script>
-<script src="javascripts/jquery.swfobject.min.js?v=509"></script>
-<script src="javascripts/jquery.titlecard.js?v=509"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=509"></script>
-<script src="javascripts/jquery.cookie.js?v=509"></script>
-<script src="javascripts/jquery.countdown.min.js?v=509"></script>
-<script src="javascripts/jquery.autotab.min.js?v=509"></script>
-<script src="javascripts/json2.js?v=509"></script>
-<script src="javascripts/purl.js?v=509"></script>
-<script src="javascripts/swfupload/swfupload.js?v=509"></script>
-<script src="javascripts/horizontal-slider.js?v=509"></script>
-<script src="javascripts/config.js?v=509"></script>
-<script src="javascripts/basic.js?v=509"></script>
-<script src="javascripts/controller.js?v=509"></script>
-<script src="javascripts/curation.js?v=509"></script>
+<script src="javascripts/nn-sdk.js?v=517"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=517"></script>
+<script src="javascripts/jquery.ellipsis.js?v=517"></script>
+<script src="javascripts/jquery.blockUI.js?v=517"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=517"></script>
+<script src="javascripts/jquery.uniform.min.js?v=517"></script>
+<script src="javascripts/jquery.swfobject.min.js?v=517"></script>
+<script src="javascripts/jquery.titlecard.js?v=517"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=517"></script>
+<script src="javascripts/jquery.cookie.js?v=517"></script>
+<script src="javascripts/jquery.countdown.min.js?v=517"></script>
+<script src="javascripts/jquery.autotab.min.js?v=517"></script>
+<script src="javascripts/json2.js?v=517"></script>
+<script src="javascripts/purl.js?v=517"></script>
+<script src="javascripts/swfupload/swfupload.js?v=517"></script>
+<script src="javascripts/horizontal-slider.js?v=517"></script>
+<script src="javascripts/config.js?v=517"></script>
+<script src="javascripts/basic.js?v=517"></script>
+<script src="javascripts/controller.js?v=517"></script>
+<script src="javascripts/curation.js?v=517"></script>
 <title>9x9.tv - Episode Curation - Curation</title>
 </head>
 <body>
@@ -450,8 +450,8 @@
 
 <div class="form-btn">
 <div class="wrap">
-<p class="btns btn-leave"><span><input type="button" id="form-btn-leave" value="Leave" /></span></p>
-<p class="btns btn-save"><span><input type="button" id="form-btn-save" value="Save" /></span></p>
+<p class="btns btn-leave"><span class="btn-right"><span class="btn-middle"><input type="button" id="form-btn-leave" value="Leave" /></span></span></p>
+<p class="btns btn-save"><span class="btn-right"><span class="btn-middle"><input type="button" id="form-btn-save" value="Save" /></span></span></p>
 <p class="next"><a href="epcurate-publish.html" id="form-btn-next" rel="publish">Next to Publish &gt;</a></p>
 </div>
 </div>
