--- a/channel-setting.html
+++ b/channel-setting.html
@@ -5,27 +5,27 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=509" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=509" />
-<link rel="stylesheet" href="stylesheets/channel.css?v=509" />
+<link rel="stylesheet" href="stylesheets/style.css?v=517" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=517" />
+<link rel="stylesheet" href="stylesheets/channel.css?v=517" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=509"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=509"></script>
-<script src="javascripts/jquery.ellipsis.js?v=509"></script>
-<script src="javascripts/jquery.blockUI.js?v=509"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=509"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=509"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=509"></script>
-<script src="javascripts/jquery.cookie.js?v=509"></script>
-<script src="javascripts/json2.js?v=509"></script>
-<script src="javascripts/purl.js?v=509"></script>
-<script src="javascripts/swfupload/swfupload.js?v=509"></script>
-<script src="javascripts/vertical.slider.js?v=509"></script>
-<script src="javascripts/config.js?v=509"></script>
-<script src="javascripts/basic.js?v=509"></script>
-<script src="javascripts/controller.js?v=509"></script>
-<script src="javascripts/channel.js?v=509"></script>
+<script src="javascripts/nn-sdk.js?v=517"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=517"></script>
+<script src="javascripts/jquery.ellipsis.js?v=517"></script>
+<script src="javascripts/jquery.blockUI.js?v=517"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=517"></script>
+<script src="javascripts/jquery.charcounter.min.js?v=517"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=517"></script>
+<script src="javascripts/jquery.cookie.js?v=517"></script>
+<script src="javascripts/json2.js?v=517"></script>
+<script src="javascripts/purl.js?v=517"></script>
+<script src="javascripts/swfupload/swfupload.js?v=517"></script>
+<script src="javascripts/vertical.slider.js?v=517"></script>
+<script src="javascripts/config.js?v=517"></script>
+<script src="javascripts/basic.js?v=517"></script>
+<script src="javascripts/controller.js?v=517"></script>
+<script src="javascripts/channel.js?v=517"></script>
 <title>9x9.tv - Channel settings</title>
 </head>
 <body>
@@ -200,7 +200,7 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <div class="form-btn">
 <div class="form-btn-wrap">
 <p class="notice hide">Please fill in all required fields.</p>
-<p class="btns btn-save disable"><span><input type="button" value="Save" /></span></p>
+<p class="btns btn-save disable"><span class="btn-right"><span class="btn-middle"><input type="button" value="Save" /></span></span></p>
 </div>
 </div>
 </form>
